# hachi

./: .gitmodules  CMakeLists.txt  term.sh
.devcontainer/: Dockerfile  devcontainer.json
src/: CMakeLists.txt  hachi.c  led.c  sd.c  xmodem.c  xmodem.h
